# EasIFA-Intelligence-Extensions

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.codex/: config.toml
.copilot/: mcp-config.json
easifa_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
skills/easifa-mcp-usage/: SKILL.md
tests/: test_config_and_client.py  test_repo_assets.py  test_server.py
